<resources>
    <string name="app_name">Demo</string>
    <string name="e_mail2">E-mail</string>
    <string name="password2">Password</string>
    <string name="new_resident2">New Resident</string>
    <string name="smart_house2">Smart House</string>
    <string name="enter_your_house2">Enter Your House</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="smart_house">Smart House</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="enter_your_house">Enter Your House</string>
    <string name="new_resident">New Resident</string>
</resources>