<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="728dp"
        android:layout_height="989dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/street_facade_of_the_long_house"
        android:contentDescription="@string/todo6" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="128dp"
        android:layout_height="134dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo7" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="369dp"
        android:layout_height="409dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:srcCompat="@drawable/_1"
        android:contentDescription="@string/todo8" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="681dp"
        android:layout_height="997dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_7"
        android:contentDescription="@string/todo9" />

    <Button
        android:id="@+id/button3"
        android:layout_width="213dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/new_resident"
        android:onClick="Enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="115dp"
        android:layout_height="96dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="132dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/smart_house"
        android:textColor="#FAF9F9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColorHint="#FAF6F6"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextEmailAddress5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textColorHint="#F6F5F5"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FBFBFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress5"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="213dp"
        android:layout_height="53dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#252222"
        android:text="@string/enter_your_house"
        android:onClick="hit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>