<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="550dp"
        android:layout_height="769dp"
        android:background="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/street_facade_of_the_long_house"
        android:contentDescription="@string/todo1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="86dp"
        android:layout_height="117dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="981dp"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo2" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="397dp"
        android:layout_height="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/_1"
        android:contentDescription="@string/todo3" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="740dp"
        android:layout_height="1156dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        app:srcCompat="@drawable/rectangle_7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="207dp"
        android:layout_height="49dp"
        android:backgroundTint="#4CAF50"
        android:onClick="Enter"
        android:text="Enter Your House"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="551dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="207dp"
        android:layout_height="49dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="#282C28"
        android:onClick="New"
        android:text="New Resident"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColorHint="#F8F6F6"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#F8F5F5"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="159dp"
        android:layout_height="129dp"
        android:layout_marginTop="136dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_house"
        android:textColor="#FBFBFB"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>